
2016-09-19  Ron Norman <rjn@inglenet.com>

	* codgen.c, tree.c, tree.h added code to optimize handling of 
	  'decimal constants' in expressions

2016-06-21  Ron Norman <rjn@inglenet.com>

	* error.c, print_error fixed to verify 'file' is NOT NULL before using
	* cobc.c added checks for some env vars having PATHSEP_CHAR in them

2016-05-05  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* tree.c: give correct error position (cb_source_file + cb_exp_line)
	  for expression warnings (did not work with constants before)
	* pplex.l: bug #102 - added check for contination line without literal
	  or word to continue.

2016-05-03  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* warning.def, tree.c: added cb_warn_constant_expr for warnings added
	  by Ron Norman on 2016-05-01
	* tree.c: resolve the value at compile time if literal size differs
	  and checks are for = or !=

2016-05-01  Ron Norman

	* In tree.c, for binary (arithmetic & relational) operations between
	  integer constants, resolve the value at compile time and reduce the
	  expression down to the computed value
	* tree.c Also, added checks to validate resolving contant expressions

2016-04-22  Ron Norman

	* parser.y, scanner.l, reserved.c & codegen.c: 
	  updates to support features of an IBM REPORT WRITER 
	  LINE LIMIT
	  PRESENT AFTER & ABSENT AFTER

2016-01-02  Ron Norman

	* In codegen.c, output_index: if subscript is unsigned then
	  output the code as if it was signed. This is to avoid a core dump
	  when an unsigned binary subscript has a value of ZERO.

2016-01-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: fixing all warnings generated by msc code analysis
	  (possible memory related issues)
	* cobc.c (process_filename): don't check object files for valid COBOL
	  file names
	* cobc.c (process_library) [_MSC_VER]: check all input filenames
	  preventing deletion of passed lib file